--- a/index.html
+++ b/index.html
@@ -4,6 +4,64 @@
     <link rel  = "stylesheet" href = "index.css">
   </head>
   <body>
-    <h1 class = "heading">Kurmurthy</h1>
+    <div id="sectionHome">
+        <div class="bg-contaner d-flex flex-column justify-content-center">
+            <div class="tourism-card">
+                <h1 class="main-heading">Tourism</h1>
+                <p class="paragraph">Plane your trip.</p>
+                <div>
+                    <button class="button text-center" onclick="display('sectionFavouritPlaces')">Move</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="sectionFavouritPlaces">
+        <div class="favouritplaces-bg-container">
+            <h1 class="favouritplaces-heading">Favourit Places</h1>
+            <div class="favourit-place-card d-flex flex-row">
+                <div>
+                    <h1 class="favourit-places-heading">Vacticum musiam</h1>
+                    <p class="favourit-places-description">
+                        Vacticum musiam is one of the place in Victican city in the Italy
+                        <a type="text" class="vacticum-city" href="https://en.wikipedia.org/wiki/Vatican_Museums">Get more about Vacticum musiam</a>
+                    </p>
+                </div>
+                <a type="text" href="https://in.images.search.yahoo.com/search/images;_ylt=Awrx_OeDXuFld8Y.Ik27HAx.;_ylu=Y29sbwNzZzMEcG9zAzEEdnRpZAMEc2VjA3BpdnM-?p=vacticum+musiam&fr2=piv-web&type=E210IN826G0&fr=mcafee">
+                    <img src="https://tse4.mm.bing.net/th?id=OIP.meXqBmqNqSOIIbYvZz6F5gAAAA&pid=Api&P=0&h=180" class="vacticum-image" />
+                </a>
+                <button class="button-back" onclick="display('sectionHome')">Back</button>
+            </div>
+            <div class="favourit-place-card d-flex flex-row">
+                <div>
+                    <h1 class="favourit-places-heading">Charminar</h1>
+                    <p class="favourit-places-description">
+                        Charminar is the one of the historic icon it's reprasent hyderabad city of telangana for more details click on
+                        <a class="text" href="https://en.wikipedia.org/wiki/Charminar">
+                            know more details
+                        </a>
+                    </p>
+                </div>
+                <a type="text" href="https://in.images.search.yahoo.com/search/images;_ylt=AwrKDa5NdOFlCzIAhMy7HAx.;_ylu=Y29sbwNzZzMEcG9zAzEEdnRpZAMEc2VjA3BpdnM-?p=charminar&fr2=piv-web&type=E210IN826G0&fr=mcafee">
+                    <img src="https://1.bp.blogspot.com/-_Wu0Iws-aLc/WWXIOWxSpgI/AAAAAAAABrU/p-76EOk0hyg5k0SH62TU7rD949UZoc88gCLcBGAs/s1600/charminar-muhammad-quli-qutb-shahi.jpg" class="charminar-image" />
+                </a>
+                <button class="button-back" onclick="display('sectionHome')">Back></button>
+            </div>
+            <div class="favourit-place-card d-flex flex-row">
+                <div>
+                    <h1 class="favouirt-places-heading">Effel tower</h1>
+                    <p class="favourit-places-description">
+                        Effel tower is one of the most visited place in paris the country of france
+                        <a class="text" href="https://en.wikipedia.org/wiki/Eiffel_Tower">for more details</a>
+                    </p>
+                </div>
+                <a type="text" href="https://in.images.search.yahoo.com/search/images;_ylt=Awrx.9PbfOFl2u4Z1hHmHAx.?p=eiffel+tower&type=E210IN826G0&fr=mcafee&fr2=p%3As%2Cv%3Av%2Cm%3Apivot">
+                    <img src="https://tse3.mm.bing.net/th?id=OIP.e9-dBGL34OYXAdYSdtLn7wHaFm&pid=Api&P=0&h=180">
+                </a>
+                <button class="button-back" onclick="display('sectionHome')">Back></button>
+            </div>
+            <button class="button" onclick="display('sectionHome')">Back to home</button>
+        </div>
+    </div>
+    <script type="text/javascript" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/js/ccbp-ui-kit.js"></script>
   </body>
 </html>
